page cortes update

--- a/App/Views/CortesPage/cortes.html
+++ b/App/Views/CortesPage/cortes.html
@@ -3,7 +3,7 @@
         <div class="container-title-cortes">
             <h1>Nossos trabalhos</h1>
         </div>
-        <div class="carousel">
+        <div class="carousel-principal">
             <div class="slider">
                 <div class="slides">
                     <input type="radio" id="radio1" name="radio-buttons" value="inp1"/>
@@ -12,7 +12,7 @@
                     <input type="radio" id="radio4" name="radio-buttons" value="inp4" checked/>
                     <input type="radio" id="radio5" name="radio-buttons" value="inp5"/>
                     <input type="radio" id="radio6" name="radio-buttons" value="inp6"/>
-                    <input type="radio" id="radio7" name="radio-buttons" value="inp7"/>
+                    <input type="radio" id="radio7" name="radio-buttons" value="inp7"/> 
 
                     <div class="slide first slide1">
                         <div class="background-text">
@@ -124,6 +124,57 @@
                      alt="Next" 
                      title="Próximo">
             </button>
+        </div>
+        <div class="container-subtitle">
+            <h2>Cortes personalizados</h2>
+        </div>
+        <div class="carousel-secundary">
+            <div class="slider">
+                <div class="slides">
+                    <input type="radio" id="radio2-1" name="radio-buttons">
+                    <input type="radio" id="radio2-2" name="radio-buttons">
+                    <input type="radio" id="radio2-3" name="radio-buttons">
+                    <input type="radio" id="radio2-4" name="radio-buttons">
+                    <input type="radio" id="radio2-5" name="radio-buttons" checked>
+                    <input type="radio" id="radio2-6" name="radio-buttons">
+                    <input type="radio" id="radio2-7" name="radio-buttons">
+                    <input type="radio" id="radio2-8" name="radio-buttons">
+                    <input type="radio" id="radio2-9" name="radio-buttons">
+
+                    <div class="slide first slide1"></div>
+                    <div class="slide first slide2"></div>
+                    <div class="slide first slide3"></div>
+                    <div class="slide first slide4"></div>
+                    <div class="slide first slide5"></div>
+                    <div class="slide first slide6"></div>
+                    <div class="slide first slide7"></div>
+                    <div class="slide first slide8"></div>
+                    <div class="slide first slide9"></div>
+
+                    <div class="auto-navigation">
+                        <div class="btn-auto1"></div>
+                        <div class="btn-auto2"></div>
+                        <div class="btn-auto3"></div>
+                        <div class="btn-auto4"></div>
+                        <div class="btn-auto5"></div>
+                        <div class="btn-auto6"></div>
+                        <div class="btn-auto7"></div>
+                        <div class="btn-auto8"></div>
+                        <div class="btn-auto9"></div>
+                    </div>
+                </div>
+                <div class="manual-navigation">
+                    <label for="radio2-1">Teste</label>
+                    <label for="radio2-2"></label>
+                    <label for="radio2-3"></label>
+                    <label for="radio2-4"></label>
+                    <label for="radio2-5"></label>
+                    <label for="radio2-6"></label>
+                    <label for="radio2-7"></label>
+                    <label for="radio2-8"></label>
+                    <label for="radio2-9"></label>
+                </div>
+            </div>
         </div>
     </div>
 </main>
