pre conclusion page cortes

--- a/App/Views/CortesPage/cortes.html
+++ b/App/Views/CortesPage/cortes.html
@@ -125,31 +125,94 @@
                      title="Próximo">
             </button>
         </div>
+        <div class="stripe-division"></div>
+        <div class="text-personalizados">
+            <div class="text">
+                <h4>Barbearia com estilo único: Cortes Personalizados.</h4>
+                <ul id="list-cortes">
+                    <li><span>Cortes Clássicos: </span>Perfeito para quem aprecia um estilo atemporal e elegante. 
+                        O corte clássico é cuidadosamente trabalhado com tesoura e máquina, mantendo linhas limpas 
+                        e um acabamento impecável. Ideal para ambientes profissionais ou eventos formais.
+                    </li> 
+                    <li><span>Cortes Modernos: </span>Para os que gostam de estar na moda, oferecemos cortes modernos 
+                        que incorporam as últimas tendências. Degradês suaves, linhas geométricas e estilos texturizados 
+                        são algumas das técnicas que utilizamos para criar um visual contemporâneo e sofisticado.
+                    </li>
+                    <li><span>Cortes Desenhados: </span>Se você deseja expressar sua personalidade através do cabelo, 
+                        nossos barbeiros são especialistas em cortes desenhados. Desenhos artísticos e complexos são 
+                        feitos com precisão, tornando seu cabelo uma verdadeira obra de arte.
+                    </li>
+                    <li><span>Cortes com Degradê Fade: </span>O degradê é uma técnica popular que envolve a transição 
+                        gradual de um comprimento de cabelo para outro. Oferecemos diferentes tipos de fades, incluindo 
+                        o low fade, mid fade e high fade, adaptados ao formato da sua cabeça e ao seu estilo pessoal.
+                    </li>
+                    <li><span>Cortes a gosto do Cliente: </span>Entendemos que cada cliente tem um estilo único. 
+                        Por isso, nossos barbeiros estão sempre dispostos a ouvir suas preferências e necessidades 
+                        específicas. Traga uma foto de referência ou descreva seu corte ideal, e faremos o possível 
+                        para replicá-lo com precisão e cuidado.
+                    </li>
+                    <li><span>Cortes Sociais: </span>Perfeito para ocasiões formais e sociais, o corte social combina 
+                        elegância e simplicidade. Utilizamos técnicas de tesoura e máquina para criar um look polido 
+                        e profissional, adequado para qualquer evento especial.
+                    </li>
+                    <li><span>Cortes Infantis: </span> Atendemos também os pequenos com cortes infantis personalizados. 
+                        Nossa equipe é treinada para lidar com crianças, proporcionando um ambiente tranquilo e agradável 
+                        para que os pais fiquem tranquilos e as crianças, estilosas.
+                    </li>
+                    <li><span>Cortes para Barba: </span>Além dos cortes de cabelo, oferecemos serviços completos de 
+                        cuidado com a barba. Desde um simples aparo até um desenho completo, garantimos que sua 
+                        barba ficará alinhada e estilosa, complementando seu corte de cabelo.
+                    </li>
+                </ul>
+            </div>           
+        </div>
         <div class="container-subtitle">
-            <h2>Cortes personalizados</h2>
+            <h5>Cortes personalizados</h5>
         </div>
         <div class="carousel-secundary">
             <div class="slider">
                 <div class="slides">
-                    <input type="radio" id="radio2-1" name="radio-buttons">
-                    <input type="radio" id="radio2-2" name="radio-buttons">
-                    <input type="radio" id="radio2-3" name="radio-buttons">
-                    <input type="radio" id="radio2-4" name="radio-buttons">
-                    <input type="radio" id="radio2-5" name="radio-buttons" checked>
-                    <input type="radio" id="radio2-6" name="radio-buttons">
-                    <input type="radio" id="radio2-7" name="radio-buttons">
-                    <input type="radio" id="radio2-8" name="radio-buttons">
-                    <input type="radio" id="radio2-9" name="radio-buttons">
+                    <input type="radio" id="radio2-1" name="radio-buttons-2">
+                    <input type="radio" id="radio2-2" name="radio-buttons-2">
+                    <input type="radio" id="radio2-3" name="radio-buttons-2">
+                    <input type="radio" id="radio2-4" name="radio-buttons-2">
+                    <input type="radio" id="radio2-5" name="radio-buttons-2">
+                    <input type="radio" id="radio2-6" name="radio-buttons-2">
+                    <input type="radio" id="radio2-7" name="radio-buttons-2">
+                    <input type="radio" id="radio2-8" name="radio-buttons-2">
+                    <input type="radio" id="radio2-9" name="radio-buttons-2">
+                    <input type="radio" id="radio2-10" name="radio-buttons-2" checked>
+                    <input type="radio" id="radio2-11" name="radio-buttons-2">
+                    <input type="radio" id="radio2-12" name="radio-buttons-2">
+                    <input type="radio" id="radio2-13" name="radio-buttons-2">
+                    <input type="radio" id="radio2-14" name="radio-buttons-2">
+                    <input type="radio" id="radio2-15" name="radio-buttons-2">
+                    <input type="radio" id="radio2-16" name="radio-buttons-2">
+                    <input type="radio" id="radio2-17" name="radio-buttons-2">
+                    <input type="radio" id="radio2-18" name="radio-buttons-2">
+                    <input type="radio" id="radio2-19" name="radio-buttons-2">
+                    <input type="radio" id="radio2-20" name="radio-buttons-2">
 
-                    <div class="slide first slide1"></div>
-                    <div class="slide first slide2"></div>
-                    <div class="slide first slide3"></div>
-                    <div class="slide first slide4"></div>
-                    <div class="slide first slide5"></div>
-                    <div class="slide first slide6"></div>
-                    <div class="slide first slide7"></div>
-                    <div class="slide first slide8"></div>
-                    <div class="slide first slide9"></div>
+                    <div class="slide first2 slide2-1"></div>
+                    <div class="slide slide2-2"></div>
+                    <div class="slide slide2-3"></div>
+                    <div class="slide slide2-4"></div>
+                    <div class="slide slide2-5"></div>
+                    <div class="slide slide2-6"></div>
+                    <div class="slide slide2-7"></div>
+                    <div class="slide slide2-8"></div>
+                    <div class="slide slide2-9"></div>
+                    <div class="slide slide2-10"></div>
+                    <div class="slide slide2-11"></div>
+                    <div class="slide slide2-12"></div>
+                    <div class="slide slide2-13"></div>
+                    <div class="slide slide2-14"></div>
+                    <div class="slide slide2-15"></div>
+                    <div class="slide slide2-16"></div>
+                    <div class="slide slide2-17"></div>
+                    <div class="slide slide2-18"></div>
+                    <div class="slide slide2-19"></div>
+                    <div class="slide slide2-20"></div>
 
                     <div class="auto-navigation">
                         <div class="btn-auto1"></div>
@@ -161,20 +224,51 @@
                         <div class="btn-auto7"></div>
                         <div class="btn-auto8"></div>
                         <div class="btn-auto9"></div>
+                        <div class="btn-auto10"></div>
+                        <div class="btn-auto11"></div>
+                        <div class="btn-auto12"></div>
+                        <div class="btn-auto13"></div>
+                        <div class="btn-auto14"></div>
+                        <div class="btn-auto15"></div>
+                        <div class="btn-auto16"></div>
+                        <div class="btn-auto17"></div>
+                        <div class="btn-auto18"></div>
+                        <div class="btn-auto19"></div>
+                        <div class="btn-auto20"></div>
                     </div>
                 </div>
                 <div class="manual-navigation">
-                    <label for="radio2-1">Teste</label>
-                    <label for="radio2-2"></label>
-                    <label for="radio2-3"></label>
-                    <label for="radio2-4"></label>
-                    <label for="radio2-5"></label>
-                    <label for="radio2-6"></label>
-                    <label for="radio2-7"></label>
-                    <label for="radio2-8"></label>
-                    <label for="radio2-9"></label>
+                    <label for="radio2-1" class="manual-btn2"></label>
+                    <label for="radio2-2" class="manual-btn2"></label>
+                    <label for="radio2-3" class="manual-btn2"></label>
+                    <label for="radio2-4" class="manual-btn2"></label>
+                    <label for="radio2-5" class="manual-btn2"></label>
+                    <label for="radio2-6" class="manual-btn2"></label>
+                    <label for="radio2-7" class="manual-btn2"></label>
+                    <label for="radio2-8" class="manual-btn2"></label>
+                    <label for="radio2-9" class="manual-btn2"></label>
+                    <label for="radio2-10" class="manual-btn2"></label>
+                    <label for="radio2-11" class="manual-btn2"></label>
+                    <label for="radio2-12" class="manual-btn2"></label>
+                    <label for="radio2-13" class="manual-btn2"></label>
+                    <label for="radio2-14" class="manual-btn2"></label>
+                    <label for="radio2-15" class="manual-btn2"></label>
+                    <label for="radio2-16" class="manual-btn2"></label>
+                    <label for="radio2-17" class="manual-btn2"></label>
+                    <label for="radio2-18" class="manual-btn2"></label>
+                    <label for="radio2-19" class="manual-btn2"></label>
+                    <label for="radio2-20" class="manual-btn2"></label>
                 </div>
             </div>
+        </div>
+        <div class="consideracoes">
+            <p><span>Agende seu horário na Barbearia Estilo Único e descubra o que significa ter um corte realmente 
+                personalizado!</span>
+            </p>
+            <p>Nossa equipe de barbeiros experientes está pronta para transformar suas ideias em realidade, 
+                utilizando as melhores técnicas e produtos do mercado para assegurar sua satisfação total. 
+                Venha nos visitar e experimente o que há de melhor em cortes de cabelo personalizados.
+            </p>
         </div>
     </div>
 </main>
