--- a/public/css/CortesPageStyle/cortes.css
+++ b/public/css/CortesPageStyle/cortes.css
@@ -316,7 +316,499 @@
         } 
     }
 
-    & .carousel-secundary {
+
+    & .stripe-division {
+        width: calc(100% - 100px);
+        height: 1px;
+        background-color: #cacaca;
+        margin: 80px 50px 50px 50px;
+    }
+
+    & .text-personalizados {
+        width: calc(100%);
+        display: flex;
+        justify-content: center;
         
+        & .text {
+            width: 1200px;
+
+            & h4 {
+                font-size: 18px;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+            }
+
+            & #list-cortes li {
+                margin-bottom: 30px;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+        }
+    }
+
+    /*Segundo Carousel*/
+    & .container-subtitle {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+        & h5 {
+            font-family: "Oxanium", sans-serif;
+            border: 1px solid rgb(197, 197, 197);
+            padding: 10px 50px;
+            border-radius: 10px;
+            font-size: 25px;
+        }
+    }
+
+    & .carousel-secundary {
+        width: 100%;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        
+        & .slider {
+            width: 1200px;
+            height: 650px;
+            overflow: hidden;
+            border-radius: 10px;
+            border: 1px solid rgb(59, 59, 59);
+            box-shadow: 2px 2px 10px rgb(128, 128, 128);
+            overflow-x: hidden;
+
+            & .slides {
+                width: calc(6000px + 726px); /*200px de bordas right nas imagens*/
+                height: 550px;
+                display: flex;
+                flex-direction: row;
+
+                & input[type='radio'] {
+                    display: none;
+                }
+
+                & .slide {
+                    margin-top: 10px;
+                    transition: 0.5s;
+                    box-shadow: 3px 3px 10px black;
+                    border-radius: 15px;
+                    border: 2px solid rgb(100, 100, 100);
+                }
+                & .slide:not(:last-child) {
+                    margin-right: 10px;
+                }
+
+                & .slide2-1 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-1.jpg");
+                    background-size: cover;
+                    background-position: 50%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-2 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-10.jpg");
+                    background-size: cover;
+                    background-position: 20%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-3 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-11.jpg");
+                    background-size: cover;
+                    background-position: 30%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-4 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-12.jpg");
+                    background-size: cover;
+                    background-position: 60%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-5 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-13.jpg");
+                    background-size: cover;
+                    background-position: 30%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-6 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-14.jpg");
+                    background-size: cover;
+                    /*background-position: 30%;*/
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-7 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-15.jpg");
+                    background-size: cover;
+                    /*background-position: 30%;*/
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-8 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-16.jpg");
+                    background-size: cover;
+                    background-position: 30%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-9 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-17.jpg");
+                    background-size: cover;
+                    background-position: 60%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-10 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-18.jpg");
+                    background-size: cover;
+                    background-position: 40%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-11 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-19.jpg");
+                    background-size: cover;
+                    background-position: 30%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-12 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-2.jpg");
+                    background-size: cover;
+                    background-position: 30%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-13 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-20.jpg");
+                    background-size: cover;
+                    /*background-position: 30%;*/
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-14 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-3.webp");
+                    background-size: cover;
+                    background-position: 10%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-15 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-4.jpg");
+                    background-size: cover;
+                    background-position: 30%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-16 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-5.jpg");
+                    background-size: cover;
+                    background-position: 40%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-17 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-6.jpg");
+                    background-size: cover;
+                    background-position: 30%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-18 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-7.jpg");
+                    background-size: cover;
+                    background-position: 30%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-19 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-8.jpg");
+                    background-size: cover;
+                    background-position: 70%;
+                    width: 300px;
+                    height: 400px;
+                }
+                & .slide2-20 {
+                    background-image: url("../../img/cortes-de-cabelo/cortes-personalizados/corte-personalizado-9.jpg");
+                    background-size: cover;
+                    background-position: 50%;
+                    width: 300px;
+                    height: 400px;
+                }
+
+                & #radio2-1:checked ~ .slide2-1 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-2:checked ~ .slide2-2 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-3:checked ~ .slide2-3 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-4:checked ~ .slide2-4 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-5:checked ~ .slide2-5 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-6:checked ~ .slide2-6 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-7:checked ~ .slide2-7 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-8:checked ~ .slide2-8 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-9:checked ~ .slide2-9 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-10:checked ~ .slide2-10 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-11:checked ~ .slide2-11 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-12:checked ~ .slide2-12 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-13:checked ~ .slide2-13 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-14:checked ~ .slide2-14 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-15:checked ~ .slide2-15 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-16:checked ~ .slide2-16 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-17:checked ~ .slide2-17 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-18:checked ~ .slide2-18 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-19:checked ~ .slide2-19 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+                & #radio2-20:checked ~ .slide2-20 {
+                    width: 450px;
+                    height: 550px;
+                    margin-top: 50px;
+                }
+
+
+                & #radio2-1:checked ~ .first2 {
+                    margin-left: 376px;
+                }
+                & #radio2-2:checked ~ .first2 {
+                    margin-left: 60px;
+                }
+                & #radio2-3:checked ~ .first2 {
+                    margin-left: -254px;
+                }
+                & #radio2-4:checked ~ .first2 {
+                    margin-left: -568px;
+                }
+                & #radio2-5:checked ~ .first2 {
+                    margin-left: -882px;
+                }
+                & #radio2-6:checked ~ .first2 {
+                    margin-left: -1196px;
+                }
+                & #radio2-7:checked ~ .first2 {
+                    margin-left: -1512px;
+                }
+                & #radio2-8:checked ~ .first2 {
+                    margin-left: -1828px;
+                }
+                & #radio2-9:checked ~ .first2 {
+                    margin-left: -2138px;
+                }
+                & #radio2-10:checked ~ .first2 {
+                    margin-left: -2452px;
+                }
+                & #radio2-11:checked ~ .first2 {
+                    margin-left: -2768px;
+                }
+                & #radio2-12:checked ~ .first2 {
+                    margin-left: -3080px;
+                }
+                & #radio2-13:checked ~ .first2 {
+                    margin-left: -3396px;
+                }
+                & #radio2-14:checked ~ .first2 {
+                    margin-left: -3710px;
+                }
+                & #radio2-15:checked ~ .first2 {
+                    margin-left: -4022px;
+                }
+                & #radio2-16:checked ~ .first2 {
+                    margin-left: -4336px;
+                }
+                & #radio2-17:checked ~ .first2 {
+                    margin-left: -4650px;
+                }
+                & #radio2-18:checked ~ .first2 {
+                    margin-left: -4968px;
+                }
+                & #radio2-19:checked ~ .first2 {
+                    margin-left: -5280px;
+                }
+                & #radio2-20:checked ~ .first2 {
+                    margin-left: -5594px;
+                }
+                
+
+                & #radio2-1:checked ~ .auto-navigation .btn-auto1 {
+                    background-color: #858585;
+                }
+                & #radio2-2:checked ~ .auto-navigation .btn-auto2 {
+                    background-color: #858585;
+                }
+                & #radio2-3:checked ~ .auto-navigation .btn-auto3 {
+                    background-color: #858585;
+                }
+                & #radio2-4:checked ~ .auto-navigation .btn-auto4 {
+                    background-color: #858585;
+                }
+                & #radio2-5:checked ~ .auto-navigation .btn-auto5 {
+                    background-color: #858585;
+                }
+                & #radio2-6:checked ~ .auto-navigation .btn-auto6 {
+                    background-color: #858585;
+                }
+                & #radio2-7:checked ~ .auto-navigation .btn-auto7 {
+                    background-color: #858585;
+                }
+                & #radio2-8:checked ~ .auto-navigation .btn-auto8 {
+                    background-color: #858585;
+                }
+                & #radio2-9:checked ~ .auto-navigation .btn-auto9 {
+                    background-color: #858585;
+                }
+                & #radio2-10:checked ~ .auto-navigation .btn-auto10 {
+                    background-color: #858585;
+                }
+                & #radio2-11:checked ~ .auto-navigation .btn-auto11 {
+                    background-color: #858585;
+                }
+                & #radio2-12:checked ~ .auto-navigation .btn-auto12 {
+                    background-color: #858585;
+                }
+                & #radio2-13:checked ~ .auto-navigation .btn-auto13 {
+                    background-color: #858585;
+                }
+                & #radio2-14:checked ~ .auto-navigation .btn-auto14 {
+                    background-color: #858585;
+                }
+                & #radio2-15:checked ~ .auto-navigation .btn-auto15 {
+                    background-color: #858585;
+                }
+                & #radio2-16:checked ~ .auto-navigation .btn-auto16 {
+                    background-color: #858585;
+                }
+                & #radio2-17:checked ~ .auto-navigation .btn-auto17 {
+                    background-color: #858585;
+                }
+                & #radio2-18:checked ~ .auto-navigation .btn-auto18 {
+                    background-color: #858585;
+                }
+                & #radio2-19:checked ~ .auto-navigation .btn-auto19 {
+                    background-color: #858585;
+                }
+                & #radio2-20:checked ~ .auto-navigation .btn-auto20 {
+                    background-color: #858585;
+                }
+                
+
+
+                & .auto-navigation {
+                    position: absolute;
+                    bottom: 10px;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    display: flex;
+                    justify-content: center;
+                    width: 100%;
+                }
+                & .auto-navigation div {
+                    border: 2px solid #ffffff00;
+                    border-radius: 20px;
+                    padding: 5px;
+                    transition: 0.5s;
+                }
+                & .auto-navigation div:not(:last-child){
+                    margin-right: 10px;
+                }
+            }   
+            
+            & .manual-navigation {
+                position: relative;
+                margin-top: 70px;
+                display: flex;
+                justify-content: center;
+                width: 100%;
+
+                & .manual-btn2 {
+                    border: 2px solid #7e7e7e;
+                    padding: 5px;
+                    border-radius: 20px;
+                }
+                & .manual-btn2:not(:last-child) {
+                    margin-right: 10px;
+                }
+                & .manual-btn2:hover {
+                    cursor: pointer;
+                }
+            }          
+        }
+    }
+
+    & .consideracoes {
+        text-align: center;
+        width: calc(100% -100px);
+        margin: 50px 50px 0 50px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 }
