--- a/App/Views/StructurePages/structurePages.html
+++ b/App/Views/StructurePages/structurePages.html
@@ -8,6 +8,8 @@
             <link rel="stylesheet" href="public/css/SobrePageStyle/sobre.css">
             <link rel="stylesheet" href="public/css/ContatoPageStyle/contato.css">
             <link rel="stylesheet" href="public/css/CortesPageStyle/cortes.css">
+            <link rel="stylesheet" href="public/css/LoginPageStyle/login.css">
+            <link rel="stylesheet" href="public/css/RegisterPageStyle/register.css">
             <link rel="stylesheet" href="public/css/StructurePagesStyle/structure.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,8 +40,10 @@
                                         alt="Mudar Tema">                              
                             </button>
                             <button id="user-profile">
-                                <img id="img-user-profile" src="public/img/user-black.png" 
+                                <a href="http://localhost/Barbearia-Noblesse/?page=login">
+                                    <img id="img-user-profile" src="public/img/user-black.png" 
                                         alt="Área do Usuário">
+                                </a>                           
                             </button>
                         </div>
                     </div>
