register page initial

--- a/App/Views/HomePage/home.html
+++ b/App/Views/HomePage/home.html
@@ -51,7 +51,7 @@
                 <img src="public/img/calendar-2.png" 
                         alt="Calendário">
                 <table id="table-times">
-                    <caption>Dias de funcionamento</caption>
+                    <caption>Dias e Horários de atendimento</caption>
                     <thead>
                         <tr>
                             <th>Dia da semana</th>
