--- a/App/Views/RegisterPage/register.html
+++ b/App/Views/RegisterPage/register.html
@@ -1,3 +1,62 @@
 <main>
-    <h1>Register User</h1>
+    <div class="container-register">
+        <div class="image-background-profile">
+            <div class="img-profile">
+                <img src="" alt="">
+                <button id="edit-img">
+                    <img src="" alt="">
+                </button>
+            </div>
+        </div>
+        <div class="container-title">
+            <h1>Area de Cadastro</h1>
+        </div>
+        <div class="container-form-register">
+            <div class="form-register">
+                <form action="">
+                    <div class="container-nome-dt-nascimento">
+                        <div class="container-nome">
+                            <input id="inp-nome" type="text" required/>
+                            <label for="inp-nome">Nome</label>
+                        </div>
+                        <div class="container-dt-nascimento">
+                            <input id="dt-nascimento" type="date" required/>
+                            <label for="dt-nascimento">Data de Nascimento</label>
+                        </div>
+                    </div>
+                    <div class="container-email1">
+                        <input id="inp-email1" type="email" required/>
+                        <label for="inp-email1">E-mail</label>
+                    </div>
+                    <div class="container-email2">
+                        <input id="inp-email2" type="email" required/>
+                        <label for="inp-email2">Confirme o e-mail</label>
+                    </div>
+                    <div class="container-senha">
+                        <div class="container-senha1">
+                            <input id="senha1" type="password" required/>
+                            <label for="senha1">Senha</label>
+                        </div>
+                        <div class="container-senha2">
+                            <input id="senha2" type="password" required/>
+                            <label for="senha2">Confirme a senha</label>
+                        </div>
+                    </div>
+                    <div class="info-emails">
+                        <input id="info" type="checkbox">
+                        <label for="info">Desejo receber informações e promoções por e-mail</label>
+                    </div>
+                    <div class="container-btns">
+                        <div class="btn-cancel">
+                            <button id="btn-cancel">Cancelar</button>
+                        </div>
+                        <div class="btn-clean-register">
+                            <button id="btn-clean">Limpar</button>
+                            <button id="btn-register">Cadastrar</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </main>
