--- a/public/css/LoginPageStyle/login.css
+++ b/public/css/LoginPageStyle/login.css
@@ -1,4 +1,5 @@
 .container-login {
+    font-family: Arial, Helvetica, sans-serif;
 
     & .text-initial {
         width: calc(100% - 100px);
@@ -23,7 +24,153 @@
         width: 100%;
 
         & .form {
-            
-        }
+            background-image: linear-gradient(120deg, rgba(0,0,0,0.4), rgb(0, 10, 44));
+            margin-top: 50px;
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 1px 1px 10px rgb(0, 10, 44);
+
+            & h1 {
+                margin: 0;
+                color: #fff;
+            }
+
+            & .container-email {
+                display: flex;
+                width: 100%;
+                position: relative;
+                margin-top: 30px;
+
+                & #inp-email {
+                    width: 100%;
+                    height: 30px;
+                    outline: none;
+                    border: none;
+                    border-radius: 5px; 
+                    padding-left: 10px;                  
+                }
+                & #inp-email:focus {
+                    box-shadow: 1px 1px 10px #fff;
+                }
+                & #inp-email:focus ~ label {
+                    top: -20px;
+                    left: 0;
+                    color: #fff;
+                }
+                & #inp-email:not(:focus):valid  ~ label{
+                    top: -20px;
+                    left: 0;
+                    color: #fff;
+                }
+
+                & label {
+                    position: absolute;
+                    color: rgb(168, 168, 168);
+                    top: 7px;
+                    left: 10px;
+                    transition: 0.2s;
+                }
+            }
+
+            & .container-senha {
+                display: flex;
+                width: 100%;
+                position: relative;
+                margin-top: 30px;
+
+                & #inp-senha {
+                    width: 100%;
+                    height: 30px;
+                    outline: none;
+                    border: none;
+                    border-radius: 5px;
+                    padding-left: 10px;
+                }
+                & #inp-senha:focus {
+                    box-shadow: 1px 1px 10px #fff;
+                }
+                & #inp-senha:focus ~ label {
+                    top: -20px;
+                    left: 0;
+                    color: #fff;
+                }
+                & #inp-senha:not(:focus):valid  ~ label{
+                    top: -20px;
+                    left: 0;
+                    color: #fff;
+                }
+
+                & label {
+                    position: absolute;
+                    color: rgb(168, 168, 168);
+                    top: 7px;
+                    left: 10px;
+                    transition: 0.2s;
+                }
+
+                & label {
+                    position: absolute;
+                    color: rgb(168, 168, 168);
+                    top: 7px;
+                    left: 10px;
+                }
+            }
+
+            & #conectado {
+                margin-top: 20px;
+                width: 17px;
+                height: 17px;
+            }
+            & #label-conectado {
+                color: #fff;
+                font-size: 14px;
+            }
+
+            & .container-btn-entrar {
+                margin-top: 20px;
+
+                & #btn-entrar {
+                    width: 100%;
+                    height: 35px;
+                    font-size: 14px;
+                    background-color: rgb(9, 128, 226);
+                    border: none;
+                    border: 1px solid rgb(1, 63, 145);
+                    border-radius: 20px;
+                    outline: none;
+                    color: #fff;
+                    font-weight: 600;
+                }
+                & #btn-entrar:hover {
+                    background-color: rgb(3, 104, 187);
+                    box-shadow: 1px 1px 10px #64b4ff;
+                    cursor: pointer;
+                }
+            }
+
+            & .reset-senha {
+                width: 100%;
+                text-align: center;
+                margin-top: 20px;
+
+                & a {
+                    color: #95ccff;
+                }
+            }
+
+            & .link-cadastro {
+                width: 100%;
+                text-align: center;
+                margin-top: 20px;
+
+                & p {
+                    color: #fff;
+
+                    & a {
+                        color: #95ccff;
+                    }
+                }
+            }
+        } 
     }
 }
